# whispr-2

./: Cargo.toml  README.md  post-mvp.md
whispr-core/: Cargo.toml
whispr_core/: Cargo.toml
whispr_core/src/: cryptography.rs  errors.rs  lib.rs  models.rs  protocols.rs
whispr_server/: Cargo.toml
whispr_server/src/: handler.rs  main.rs  models.rs  state.rs
whispr_tui/: Cargo.toml
whispr_tui/src/: handler.rs  main.rs  models.rs
