[package]
name = "whispr_core"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12.4"
rand = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
sha2 = "0.10.9"
x25519-dalek = "2.0.1"
