[package]
name = "whispr_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
whispr_core = { workspace = true }
postcard = { workspace= true }
serde = { workspace = true }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
ed25519-dalek = "2.2.0"
